@@ -1,3 +1,16 @@
-Diplom project for VSU.
+Graduate project for VSU.
 
-JavaFx + Spring boot
+Need to be installed for start:
+ 1) java 11
+ 2) java FX
+ 
+Entry point to run app: ru.vsu.JavaFxApplication
+VM options: --module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml
+
+Technology stack:
+1) Java FX
+2) Maven
+3) Spring boot
+    - Core
+    - Security
+    - JPA
